--- a/package.json
+++ b/package.json
@@ -41,13 +41,15 @@
     "gatsby": "^2.17.11",
     "gatsby-image": "^2.2.31",
     "gatsby-plugin-twitter": "^2.1.17",
+    "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-embed-gist": "^1.1.9",
     "gatsby-remark-relative-images": "^0.2.3",
     "prismjs": "^1.17.1",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
-    "react-use": "^13.6.3"
+    "react-use": "^13.6.3",
+    "rehype-react": "^4.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
@@ -74,7 +76,7 @@
     "gatsby-remark-responsive-iframe": "^2.2.26",
     "gatsby-remark-smartypants": "^2.1.15",
     "gatsby-source-filesystem": "^2.1.36",
-    "gatsby-transformer-remark": "^2.6.33",
+    "gatsby-transformer-remark": "^2.6.45",
     "gatsby-transformer-sharp": "^2.3.3",
     "graphql": "^14.5.8",
     "husky": "^3.0.9",
