--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit",
     "lint-ts": "tslint --project .",
     "lint-css": "stylelint \"src/**/*.css\"",
-    "format-all": "prettier --write './**/*.{js,jsx,md,tsx,ts,json}'"
+    "format-all": "prettier --write './**/*.{js,jsx,md,mdx,tsx,ts,json}'"
   },
   "husky": {
     "hooks": {
@@ -25,7 +25,7 @@
       "yarn lint-ts",
       "git add"
     ],
-    "*.md": [
+    "*.{md,mdx}": [
       "yarn prettier --write",
       "git add"
     ],
