Remove unused deps

--- a/package.json
+++ b/package.json
@@ -53,10 +53,10 @@
     "@babel/core": "^7.7.2",
     "@svgr/webpack": "^4.3.3",
     "@types/classnames": "^2.2.9",
+    "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
     "@types/react-helmet": "^5.0.14",
     "autoprefixer": "^9.7.1",
-    "eslint-plugin-graphql": "^3.1.0",
     "gatsby-plugin-feed": "^2.3.20",
     "gatsby-plugin-google-analytics": "^2.1.25",
     "gatsby-plugin-manifest": "^2.2.27",
@@ -78,7 +78,6 @@
     "graphql": "^14.5.8",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
-    "netlify-cms-app": "^2.9.7",
     "postcss-custom-media": "^7.0.8",
     "postcss-custom-properties": "^9.0.2",
     "postcss-mixins": "^6.2.3",
